src/shells/zigshell-cairo-pango-clay/src/dock_c.h

// Cairo — opaque types with known layout for Zig
typedef struct _cairo { int _opaque; } cairo_t;
typedef struct _cairo_surface { int _opaque; } cairo_surface_t;
#define CAIRO_FORMAT_ARGB32 0
cairo_surface_t *cairo_image_surface_create(int format, int width, int height);
void cairo_surface_destroy(cairo_surface_t *surface);
cairo_t *cairo_create(cairo_surface_t *target);
void cairo_destroy(cairo_t *cr);
void cairo_set_source_rgba(cairo_t *cr, double red, double green, double blue, double alpha);
void cairo_set_line_width(cairo_t *cr, double width);
void cairo_new_sub_path(cairo_t *cr);
void cairo_move_to(cairo_t *cr, double x, double y);
void cairo_close_path(cairo_t *cr);
void cairo_rectangle(cairo_t *cr, double x, double y, double width, double height);
void cairo_arc(cairo_t *cr, double xc, double yc, double radius, double angle1, double angle2);
void cairo_fill(cairo_t *cr);
void cairo_stroke(cairo_t *cr);
int cairo_surface_write_to_png(cairo_surface_t *surface, const char *filename);
void cairo_set_font_size(cairo_t *cr, double size);
void cairo_show_text(cairo_t *cr, const char *utf8);